--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "version": "1.0.0",
   "main": "app.js",
   "devDependencies": {
-    "axios": "^0.19.2"
+    "axios": "^0.19.2",
+    "lowdb": "^1.0.0"
   },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
